Miscellaneous fixes and improvements - Fixed an issue with incorrectly generated enums in generate_datamodels.py and switched from strings to enums in a few places - Added better health check parameters for API container in compose.yml - Changed localization endpoint to return 422 when localization fails - Changed reconstructor to load models on startup rather than per reconstruction - Changed MAX_KEYPOINTS_PER_IMAGE from a reconstruction option to a container env variable (because Superpoint takes it on load) - Changed localizer and reconstructor to disable gradient calculation globally - Added retrieval_top_k and ransac_threshold as localization options - Added lightglue_batch_size as a reconstruction option - Fixed attach debugging for API (use editable installs for dev, and mount source in compose.yml) - Switched back to using named litestar http exceptions when available - Changed localization endpoint to propagate 422 on localization failure - Changed fetch_localization_maps to throw if query params are provided and associated maps are not found - Improved log_http_exception to handle more cases correctly - Added **/bin.meta and **/obj.meta to .gitignore
